按钮换回点击事 更符合用户习惯

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ button {
   touch-action: none;
 }
 
-.button--active {
+button:active {
   transform: translateY(0.2rem);
   box-shadow: 0 0.1rem var(--button-shadow);
 }
